# logic-graph

./: .gitattributes  .gitignore  Cargo.toml  Compiler.py  Context.py  ContextVisitor.py  FlagProcessor.py  INSTALL.md  ItemVisitor.py  LICENSE  README.md  RustVisitor.py  SettingVisitor.py  TestProcessor.py  Utils.py  diesel.toml  requirements.txt
.github/: dependabot.yml
analyzer/: Cargo.toml
analyzer/src/: a_star.rs  access.rs  algo.rs  bucket.rs  cli.rs  condense.rs  context.rs  db.rs  direct.rs  estimates.rs  greedy.rs  heap.rs  history.rs  lib.rs  minimize.rs  models.rs  observation.rs  observer.rs  optimize.rs  priority.rs  prof.rs  route.rs  schema.rs  scoring.rs  search.rs  settings.rs  solutions.rs  storage.rs  timing.rs  unittest.rs  world.rs
analyzer/src/matchertrie/: db.rs  matcher.rs  mod.rs  observe.rs  trie.rs
analyzer/src/steiner/: approx.rs  gflac3.rs  graph.rs  mod.rs  sp.rs  wu.rs
analyzer/src/testlib/: db.rs  heap.rs  mod.rs
games/: README.md  log4rs.yml
games/.cargo/: config.toml
games/AxiomVerge2/: .env  Amagi Breach.yaml  Amagi.yaml  Annuna Breach.yaml  Annuna.yaml  Antarctica.yaml  Cargo.toml  Ebih Breach.yaml  Ebih.yaml  Emergence.yaml  Filter.yaml  Game.yaml  Giguna Breach.yaml  Giguna.yaml  Glacier Breach.yaml  Glacier.yaml  Interior.yaml  Irikar Breach.yaml  Irikar.yaml  Menu.yaml  Uhrum Breach.yaml  Uhrum.yaml  digraph.dot  tools.py
games/AxiomVerge2/benches/: bench.rs
games/AxiomVerge2/data/: digraph.dot  digraph.mmd  digraph_nodes.dot  full_graph.m4  graph_map.sh
games/AxiomVerge2/migrations/1_create/: down.sql  up.sql
games/AxiomVerge2/routes/: all_items_old.txt  all_urns.txt  best1.txt  simple_progress.txt  skip_tablet.txt  warpless.txt
games/AxiomVerge2/settings/: all_urns.yaml  bench.yaml  log4rs.yml  log4unittest.yml  progress.yaml  warpless.yaml  ymg.yaml
games/AxiomVerge2/src/: VERSION  context.rs  graph.rs  graph_enums.rs  helpers.rs  items.rs  lib.rs  movements.rs  observe.rs  prices.rs  rules.rs  schema.rs  settings.rs  version.rs
games/AxiomVerge2/src/graph/: action.rs  community.rs  coord.rs  enums.rs  exit.rs  graph.rs  location.rs  mod.rs  spot.rs  warp.rs
games/AxiomVerge2/tests/: AccessTests.yaml  AmagiTests.yaml  AnnunaTests.yaml  AttractorTests.yaml  BreachTests.yaml  EbihTests.yaml  GigunaTests.yaml  GlacierTests.yaml  GreedyTests.yaml  IrikarTests.yaml  LedgeTests.yaml  amagi_tests.rs  ebih_tests.rs  giguna_tests.rs  greedy_tests.rs  ledge_tests.rs  test.rs  unittest.rs
games/sample/: .env  Cargo.toml  Deku Tree.yaml  Forest.yaml  Game.yaml  Kakariko.yaml  digraph.dot  ex.setting
games/sample/benches/: bench.rs  loc_bench.rs
games/sample/data/: digraph.dot  digraph.mmd  digraph_nodes.dot  full_graph.m4  graph_map.sh
games/sample/src/: VERSION  context.rs  digraph.dot  graph.rs  graph_enums.rs  helpers.rs  items.rs  lib.rs  main.rs  movements.rs  observe.rs  prices.rs  rules.rs  settings.rs  version.rs
games/sample/src/graph/: action.rs  community.rs  coord.rs  enums.rs  exit.rs  graph.rs  location.rs  mod.rs  spot.rs  warp.rs
games/sample/tests/: db.rs  route.rs  unittest.rs
games/templates/: .env.rs.jinja  Cargo.toml.jinja  bench.rs.jinja  context.rs.jinja  digraph.dot.jinja  digraph.mmd.jinja  digraph_nodes.dot.jinja  enum.rs.jinja  full_graph.m4.jinja  graph.rs.jinja  graph_enums.rs.jinja  graph_map.sh.jinja  header.rs.jinja  helpers.rs.jinja  items.rs.jinja  lib.rs.jinja  macros.jinja  main.rs.jinja  movements.rs.jinja  observe.rs.jinja  prices.rs.jinja  rules.rs.jinja  settings.rs.jinja  solution_graph.m4.tera  tests.rs.jinja  unittest.rs.jinja  version.rs.jinja
games/templates/graph/: action.rs.jinja  community.rs.jinja  coord.rs.jinja  enums.rs.jinja  exit.rs.jinja  graph.rs.jinja  location.rs.jinja  mod.rs.jinja  spot.rs.jinja  warp.rs.jinja
grammar/: Rules.g4  StringVisitor.py  Unittest.py  __init__.py  build.py
grammar/visitors/: ContextVisitor.py  HelperVisitor.py  ItemVisitor.py  PossibleVisitor.py  RustVisitor.py  SettingVisitor.py  StringVisitor.py  __init__.py
migrations/1_create/: down.sql  up.sql
