[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
as-slice = "*"
bucket_queue = "*"
clap = { version = "4.*", features = ["derive"] }
disjoint-hash-set = "*"
disjoint-sets = "*"
enum-map = "*"
humansize = { version = "2.1", features = ["no_alloc"] }
lazy_static = "*"
lru = "*"
num_cpus = "*"
pheap = "*"
plotlib = "0.5"
priority-queue = "*"
rayon = "*"
regex = "*"
rocksdb = { version = "*", default-features = false, features = ["snappy", "zstd"] }
rmp-serde = "*"
rustc-hash = "*"
union-find = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
sort_by_derive = "0.1.10"
yaml-rust = "*"
libtest-mimic = "*"