[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
as-slice = "*"
bitflags = "2.6"
bucket_queue = "*"
clap = { version = "4.*", features = ["derive"] }
disjoint-hash-set = "*"
disjoint-sets = "*"
enum-map = { version = ">=2.7.2" }
humansize = { version = ">=2.1", features = ["no_alloc"] }
lazy_static = "*"
log = "*"
lru = "*"
num_cpus = "*"
ordered-float = "4.*"
pheap = "*"
plotlib = ">=0.5"
priority-queue = "*"
rayon = "*"
regex = "*"
rocksdb = { version = "=0.22", default-features = false, features = ["snappy", "zstd"] }
rmp-serde = "*"
rustc-hash = "*"
similar = "*"
union-find = "*"
serde = { version = ">=1.0", features = ["derive", "rc"] }
sort_by_derive = ">=0.1.10"
tera = { version = "1", default-features = false }
yaml-rust = "*"
libtest-mimic = "*"
