[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
as-slice = "*"
base64 = "*"
bitflags = "2.6"
bucket_queue = "*"
clap = { version = "4.*", features = ["derive"] }
disjoint-hash-set = "*"
disjoint-sets = "*"
enum-map = { version = ">=2.7.2" }
humansize = { version = ">=2.1", features = ["no_alloc"] }
indicatif = { version = "*", features = ["improved_unicode"] }
lazy_static = "*"
log = "*"
lru = "*"
num_cpus = "*"
ordered-float = "4.*"
pheap = "*"
plotlib = ">=0.5"
priority-queue = "*"
rayon = "*"
regex = "*"
rocksdb = { version = "=0.22", default-features = false, features = ["snappy", "zstd"] }
rmp-serde = "*"
rustc-hash = "*"
similar = "*"
union-find = "*"
serde = { version = ">=1.0", features = ["derive", "rc"] }
sort_by_derive = ">=0.1.10"
tera = { version = "1", default-features = false }
yaml-rust = "*"

# For profiling handler
axum = "*"
tokio = { version = "*", features = ["net", "rt", "rt-multi-thread"] }

# For tests
libtest-mimic = "*"
tempfile = "*"

# For mysql
diesel = { version = "2.*", default-features = false, features = ["mysql"], optional = true }
dotenvy = { version = "*", optional = true }
[target.'cfg(target_env = "msvc")'.dependencies]
mysqlclient-sys = { version = "0.4", features = ["bundled"], optional = true}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemalloc_pprof = { version = "*", optional = true }
tikv-jemallocator = { version = "0.6.0", features = ["profiling", "unprefixed_malloc_on_supported_platforms"], optional = true }

[features]
jemalloc = ["dep:jemalloc_pprof", "dep:tikv-jemallocator"]
mysql = ["dep:diesel", "dep:dotenvy"]
