[package]
name = "sample"
version = "0.1.0"
edition = "2021"

[lib]
name = "libsample"
path = "src/lib.rs"

[[bin]]
name = "sample"
path = "bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer = { path = "../../analyzer" }
enum-map = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "loc_bench"
harness = false
